add: logging using background thread log worker

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -120,6 +120,10 @@
         "sstream": "cpp",
         "stdexcept": "cpp",
         "streambuf": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "ctime": "cpp",
+        "fstream": "cpp",
+        "iomanip": "cpp",
+        "condition_variable": "cpp"
     }
 }
