--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,10 +3,13 @@ project(HttpServer)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
+set(CMAKE_C_COMPILER "/usr/bin/gcc")
+set(CMAKE_CXX_COMPILER "/usr/bin/g++")
+
 
 include_directories(include)
 
-file(GLOB SOURCES "src/*.cpp" "tests/*.cpp")
+file(GLOB SOURCES "src/*.cpp" "example/*.cpp")
 
 add_executable(http_server
     ${SOURCES}
