--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -106,6 +106,11 @@
         "fstream": "cpp",
         "iomanip": "cpp",
         "condition_variable": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "ratio": "cpp",
+        "mutex": "cpp",
+        "semaphore": "cpp",
+        "stop_token": "cpp",
+        "thread": "cpp"
     }
 }
